Fixed a bug with star rating not working on iPhone

--- a/app/client/css/style.css
+++ b/app/client/css/style.css
@@ -151,7 +151,9 @@ section {
 footer {
   margin: 50px 0;
 }
-
+.iosFix {
+  cursor: pointer;
+}
 @media(max-width:768px) {
   section {
     padding-top: 25px;
